[package]
name = "lnnode"
version = "0.1.0"
authors = ["Enigbe Ochekliye <enigbeos@protonmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightning = { version = "0.0.106", features = ["max_level_trace"] }
lightning-block-sync = { version = "0.0.106", features = [ "rpc-client" ] }
lightning-invoice = { version = "0.14" }
lightning-net-tokio = { version = "0.0.106" }
lightning-persister = { version = "0.0.106" }
lightning-background-processor = { version = "0.0.106" }

base64 = "0.13.0"
bitcoin = "0.27"
bitcoin-bech32 = "0.12"
bech32 = "0.8"
hex = "0.3"

futures = "0.3"
chrono = "0.4"
rand = "0.4"
serde_json = { version = "1.0" }
tokio = { version = "1", features = [ "io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time" ] }

actix-web = "4.0.1"
config = "0.13.1"
serde = {version = "1", features = ["derive"]}
dotenv = "0.15.0"
clap = "3.1.8"
reqwest = "0.11.10"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[[bin]]
name = "lnnode"
path = "src/lib/main.rs"

[[bin]]
name = "lnnode-cli"
path = "src/bin/cli.rs"

[lib]
name = "lnnode"
path = "src/lib/main.rs"